recursion.lessons.recursion.dragoncurve.DragonCurve1.scala.error
DragonCurve1:3: error: not found: value levels
	if(levels==1){
           ^DragonCurve1:7: error: not found: value u
		u = (x + z)/2 + (t - y)/2
                ^DragonCurve1:8: error: not found: value v
		v = (y + t)/2 - (z - x)/2
                ^DragonCurve1:9: error: not found: value a
		dragon(order-1,a,b,u,v)
                               ^DragonCurve1:10: error: not found: value c
		dragon(order-1,c,d,u,v)
                               ^