recursion.lessons.recursion.dragoncurve.DragonCurve1.scala.code
def dragon(order:Int, x:Double, y:Double, z:Double, t:Double) {
	if(levels==1){
		setPos(x,y)
		allerVers(z,t)
	}else{
		u = (x + z)/2 + (t - y)/2
		v = (y + t)/2 - (z - x)/2
		dragon(order-1,a,b,u,v)
		dragon(order-1,c,d,u,v)
	}
}
